jam: cross-platform build hardening and Build docs rewrite
- CMAKE_POSITION_INDEPENDENT_CODE ON globally: the per-ISA OBJECT libraries
  never inherited the shared library's -fPIC (Mach-O hid it; strict ELF fails
  the link, default-PIE distros sneak PIE code into the .so)
- jam_bench: sleep_us/ncpus shims - MinGW-w64 has no sysconf/usleep, so the
  documented Windows cross build failed with the default JAM_TESTS=ON
- -mavxvnni probed via check_c_compiler_flag (needs GCC 11+; older cross
  toolchains skip the TU and dispatch falls back to AVX2)
- CMAKE_BUILD_TYPE defaults to Release: a bare configure used to silently
  stage an -O0 library into dist/native for shipping
- fail fast with a message on MSVC and on Intel-Mac builds (macOS is
  Apple-silicon only); THREADS_PREFER_PTHREAD_FLAG
- staging comment reflects the local-VM packaging flow (no CI by design)
- README Build section rewritten: common requirements, the MinGW-w64 Windows
  contract, the per-artifact toolchain table, cross-JNI recipes, and the
  accumulate-then-build-jar.sh fat-jar flow